Fixed issue with nav bar menu not collapsing to hamburger menu

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-color:aqua !important;
+}
 h1 {
     padding-left: 20%;
     text-align: center;
@@ -24,8 +27,8 @@ h1 {
     height: 100%;
 }
 
-#navbar {
-    position: fixed;
+/* #navbar {
+    position: relative;
     top: 0px;
     width: 100%;
-}
+} */
